<resources>
    <string name="app_name">Android-Bootcamp-2025-Frontend</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="register_title">Создайте аккаунт</string>
    <string name="hint_name">Иванов Иван Иванович</string>

    <string name="login_title">Войти в аккаунт</string>

    <string name="email_field">Почта</string>
    <string name="hint_email">Введите почту</string>

    <string name="password_field">Пароль</string>
    <string name="hint_password">Введите пароль</string>

    <string name="login_btn">Войти</string>
    <string name="heart"><![CDATA[<3]]></string>
    <string name="arrow"><![CDATA[<-]]></string>
    <string name="name_field">ФИО</string>
    <string name="next_btn">Далее</string>
    <string name="starter_1">Станьте частью доброго сообщества</string>
    <string name="starter_3">Просто зарегистрируйтесь или войдите в существующий аккаунт</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="starter_about">about</string>
    <string name="test_name">Артемий</string>

    <string name="phone_field">Телефон</string>
    <string name="hint_phone">Введите номер телефона</string>
    <string name="city_field">Город</string>
    <string name="hint_city">Москва</string>
    <string name="about_field">О себе</string>
    <string name="hint_about">Расскажите о себе</string>

    <string name="test_list_name">Артемий Иванович</string>
    <string name="free_status">Не занят</string>
    <string name="free_btn">Не занятые</string>
    <string name="active_btn">Занятые</string>
    <string name="volunteers_text">Волонтеры</string>
    <string name="map_btn">Карта</string>
    <string name="list_btn">Список</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="error_text">Error Text</string>
    <string name="refresh">Refresh</string>
    <string name="telegram_username">Введите свой Telegram username</string>
    <string name="telegram">Телеграм</string>
    <string name="role">Роль в системе</string>
    <string name="birthDate">Дата рождения</string>
    <string name="organizationName">Название организации</string>
    <string name="about">О себе</string>
    <string name="error">Ошибка</string>
    <string name="hint_organization">Название организации</string>
    <string name="hint_telegram">\@example</string>
    <string name="save">Сохранить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join">Присоединиться</string>

</resources>