<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:foregroundTint="@color/violet"
    tools:context=".ui.profile.view.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="412dp"
        android:layout_height="64dp"
        android:background="@drawable/header_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageButton
            android:id="@+id/arrowBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:src="@drawable/frame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/arrowBack" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/name_field"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editFullName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="name"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/birthDate"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="birthDate"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_semibold"
                    android:inputType="date"
                    android:textColor="@color/textPrimary"
                    tools:hint="2000-01-01" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/phone_field"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="phone"
                    android:fontFamily="@font/montserrat_semibold"
                    android:inputType="phone"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp"
                    tools:hint="+79000000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/email_field"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="emailAddress"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/telegram"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTelegram"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="telegram"
                    android:fontFamily="@font/montserrat_semibold"
                    android:hint="@string/hint_telegram"
                    android:inputType="text"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/about"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editAbout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="clip_horizontal"
                    android:hint="@string/hint_about"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/textPrimary"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/violet"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="166dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/error_text"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/refreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/textPrimary"
            android:text="@string/refresh"
            app:cornerRadius="35dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>